# ai_voice_agent

./: .gitignore
chained/: index.html  pyproject.toml
e2e/: README.md  index.html  pyproject.toml  sap_sales_assistant_instructions.md  server.py
voice-ai/chained/: README.md  server.py
voice-ai/e2e/: server.py
